feat(architecture): implement repository pattern and enhance data seeding - Added core repository contracts (IGenericRepository, IUnitOfWork) - Implemented service layer with ProductService and ServiceManager - Updated data seeding implementation in Infrastructure - Configured DI in Program.cs for new services - Added DTOs in Shared project for API contracts - Created mapping profiles for entity-DTO conversions - Added wwwroot for static files support - Updated project references in Service.csproj and Presentation.csproj - Modified appsettings.json with new configuration values This change introduces: - Proper separation of concerns with repository pattern - Clean architecture implementation with service layer - Improved data seeding capabilities - Ready-to-use API endpoints structure - Better project organization with DTOs and mapping

--- a/E-commerce.Web/appsettings.json
+++ b/E-commerce.Web/appsettings.json
@@ -8,6 +8,9 @@
     "AllowedHosts": "*",
     "connectionStrings": {
         "DefaultConnection": "Server=.;Database=Ecommerce;Trusted_Connection=True;TrustServerCertificate=true"
+    },
+    "Urls": {
+        "BaseUrl": "https://localhost:7060/"
     }
     
 
