--- a/Infrastructure/Presentation/Presentation.csproj
+++ b/Infrastructure/Presentation/Presentation.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\..\Core\ServiceAbstraction\ServiceAbstraction.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" Version="8.0.0" />
+	</ItemGroup>
+	
+
+
 </Project>
