--- a/E-commerce.Web/appsettings.json
+++ b/E-commerce.Web/appsettings.json
@@ -7,7 +7,8 @@
     },
     "AllowedHosts": "*",
     "connectionStrings": {
-        "DefaultConnection": "Server=.;Database=Ecommerce;Trusted_Connection=True;TrustServerCertificate=true"
+        "DefaultConnection": "Server=.;Database=Ecommerce;Trusted_Connection=True;TrustServerCertificate=true",
+        "RedisConnection": "host.docker.internal:6379,abortConnect=false,connectTimeout=5000"
     },
     "Urls": {
         "BaseUrl": "https://localhost:7060/"
