feat(orders): implement order module with delivery system integration
- Added complete order management system:
  * Implemented OrderService with order processing logic
  * Created Order entities (Order, OrderItem) and configurations
  * Added OrderProfile with OrderItemPictureUrlResolver
  * Introduced OrderModuleSpecifications for querying

- Enhanced delivery system:
  * Fixed delivery method table naming (DeliveyMethods → DeliveryMethod)
  * Added DeliveryMethodNotFoundException
  * Updated delivery.json seed data

- Improved authentication services:
  * Modified AuthenticationService and IServiceManager
  * Updated AddressDto and related identity migrations
  * Fixed FirstName typo in address table (FistrName → FirstName)

- Infrastructure changes:
  * Added OrdersController with order endpoints
  * Updated ApiBaseController for shared functionality
  * Modified DataSeeding for order-related data

- Configuration updates:
  * Updated appsettings.json for service registration
  * Added new migrations for order and delivery systems

BREAKING CHANGES:
- Requires database migration due to:
  * New Order tables
  * DeliveryMethod table rename
  * Address column name change
- Service layer contracts updated in IServiceManager

--- a/E-commerce.Web/appsettings.json
+++ b/E-commerce.Web/appsettings.json
@@ -9,7 +9,7 @@
     "connectionStrings": {
         "DefaultConnection": "Server=.;Database=Ecommerce;Trusted_Connection=True;TrustServerCertificate=true",
         "IdentityConnection": "Server=.;Database=Ecommerce.Identity;Trusted_Connection=True;TrustServerCertificate=true",
-        "RedisConnection": "host.docker.internal:6379,abortConnect=false,connectTimeout=5000"
+        "RedisConnection": "localhost:6379,abortConnect=false,connectTimeout=10000"        
     },
     "Urls": {
         "BaseUrl": "https://localhost:7060/"
